<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".three_dots_menu.Settings">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/donate_description"
            android:layout_width="0dp"
            android:text="@string/donate_description"
            android:textColor="@color/Black"
            android:textSize="24sp"
            android:padding="@dimen/big_padding"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/donate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donate_button"
            android:textColor="@color/White"
            android:textSize="36sp"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            app:layout_constraintTop_toBottomOf="@id/donate_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/donate_thank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/donate_thank"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/Black"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/donate_button"
            />

        <TextView
            android:id="@+id/donate_warning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="@dimen/big_padding"
            android:text="@string/donate_warning"
            android:textAlignment="center"
            android:textColor="@color/Red"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/donate_thank" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>