<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/db_tag_recyclerview_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/db_tag_item_view_description"
        android:textSize="14sp"
        android:fontFamily="sans-serif-medium"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/db_tag_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/db_tag_recyclerview_item"
        android:padding="@dimen/small_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/db_tag_recyclerview_title" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/db_tag_fab_add"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/db_tag_add"
        android:src="@drawable/ic_add_tag_24dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/db_tag_folder_add"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintLeft_toRightOf="@id/db_tag_fab_reset"
        app:layout_constraintRight_toLeftOf="@id/db_tag_fab_add"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/db_folder_add"
        android:src="@drawable/ic_create_new_folder_24dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/db_tag_fab_reset"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/db_tag_reset"
        android:src="@drawable/ic_replay_colorsecondary_24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>